altera o método de envio para post e o destino para o endereço da api

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <form>
+    <form method="post" action="http://localhost:5000/cadastro">
       <label for="name">Nome:</label>
       <input id="name" name="name" required />
       <label for="documento">RG:</label>
