--- a/home.html
+++ b/home.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <form method="post" action="http://localhost:5000/cadastro">
-      <label for="name">Nome:</label>
-      <input id="name" name="name" required />
-      <label for="documento">RG:</label>
+      <label for="nome">Nome</label>
+      <input id="nome" name="nome" required />
+      <label for="documento">RG</label>
       <input id="documento" name="doc" required />
       <button type="submit">Enviar</button>
     </form>
