--- a/sucesso.html
+++ b/sucesso.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <script type="text/javascript" src='./script.js' defer>
+      
+    </script>
   </head>
   <body>
     <h1>Sucesso</h1>
     <p>Seu cadastro foi realizado</p>
     <a href="/home.html">Voltar para home</a>
+
+    <button id="btn">Clique aqui</button>
   </body>
 </html>
