--- a/home.html
+++ b/home.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    
+    <script type="text/javascript" src='./script-home.js' defer></script>
   </head>
   <body>
-    <form method="post" action="http://localhost:5000/cadastro">
-      <label for="nome">Nome</label>
-      <input id="nome" name="nome" required />
+    <form id="form" method="post" action="http://localhost:5000/cadastro">
+      <label for="nome-bla">Nome</label>
+      <input id="nome-bla" name="nome" required />
       <label for="documento">RG</label>
       <input id="documento" name="doc" required />
       <button type="submit">Enviar</button>
     </form>
+
+    <br />
+    <button id="focar-doc">Focar em documento</button>
+
+    <div id="letras">Letras digitadas: <span></span></div>
   </body>
 </html>
