--- a/sucesso.html
+++ b/sucesso.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <script type="text/javascript" src='./script.js' defer>
+    <script type="text/javascript" src='./script-sucesso.js' defer>
       
     </script>
   </head>
@@ -14,6 +14,6 @@
     <p>Seu cadastro foi realizado</p>
     <a href="/home.html">Voltar para home</a>
 
-    <button id="btn">Clique aqui</button>
+    <button id="btn">Clique aqui para focar no documento</button>
   </body>
 </html>
